<resources>
    <string name="app_name">1adda4u</string>
    <string name="app_subtitle">A service hub 4 u</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="home_head">Hungry?     We got you!</string>
    <string name="image_des">images to display</string>
    <string name="items">Item 1</string>
    <string name="cardClick">onCardClick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="canteenName">Canteen </string>
    <string name="location">Location</string>
    <string name="location3">BMSCE</string>
    <string name="location2">BMSSA</string>
    <string name="location1">BMSIT</string>
    <string name="cost">₹ 100</string>
</resources>
